# libDebug

./: .clang-tidy  .gitignore  Breakpoint.cpp  Breakpoint.hpp  CMakeLists.txt  CMakePresets.json  Context.cpp  Context.hpp  ContextArm.hpp  ContextIntel.hpp  Debugger.cpp  Debugger.hpp  Event.cpp  Event.hpp  Proc.cpp  Proc.hpp  Process.cpp  Process.hpp  README.md  Region.cpp  Region.hpp  RegisterRef.hpp  State.hpp  Thread.cpp  Thread.hpp  cspell.config.yaml  main.cpp
cmake/Modules/: EnableSanitizers.cmake
example/: CMakeLists.txt  main.cpp  test_app.cpp
lib/: Breakpoint.cpp  BreakpointIntel.cpp  CMakeLists.txt  Context.cpp  ContextArm.cpp  ContextIntel.cpp  Debugger.cpp  Elf.cpp  Memory.cpp  Proc.cpp  Process.cpp  Thread.cpp  ThreadIntel.cpp
lib/include/Debug/: Breakpoint.hpp  BreakpointIntel.hpp  Context.hpp  ContextArm.hpp  ContextIntel.hpp  Debugger.hpp  DebuggerError.hpp  Defer.hpp  Elf.hpp  Event.hpp  EventStatus.hpp  Memory.hpp  Proc.hpp  Process.hpp  Ptrace.hpp  RegisterRef.hpp  Result.hpp  Thread.hpp  ThreadIntel.hpp
tests/: CMakeLists.txt  Test.cpp  Test.hpp  TestHelpers.hpp  breakpoint_tests.cpp  clone_exit_tests.cpp  process_events_tests.cpp  readwrite_tests.cpp  sse_state_tests.cpp  unit_tests.cpp
